<resources>
    <string name="euro_format">%1$.2f€</string>
    <string name="percentage_format">(%1$.2f%%)</string>

    <string name="app_name">Portfolio</string>
    <string name="open_positions">Portefeuille</string>
    <string name="cours">Cours</string>
    <string name="quantity">Quantité</string>
    <string name="times">x</string>
    <string name="equal">=</string>
    <string name="estimation">Estimation</string>
    <string name="plusminusvalue">+/- Value</string>
    <string name="buyprice">Prix achat</string>
    <string name="investment">Investissement</string>
    <string name="local_values">Mes valeurs française</string>
    <string name="foreign_values">Mes valeurs étrangères</string>
    <string name="pending_plus_minus_value">+/- value latente</string>
    <string name="top_3_stocks">Top 3</string>
    <string name="flop_3_stocks">Flop 3</string>
    <string name="arrow_description">voir graphique sur la journée</string>
    <string name="create_new_stock">ajouter un élément</string>
    <string name="stock_symbol">SAN.PA</string>
    <string name="number_of_shares">10</string>
    <string name="decimal_price">100.0</string>
    <string name="date">yyyy-MM-dd HH:mm:ss</string>
    <string name="add_position">Ajouter la position</string>
    <string name="error_input_invalid">Formulaire invalide</string>
    <string name="error_date_invalid">Date invalide</string>
    <string name="position_added">Position ajoutée</string>
    <string name="edit_description">editer</string>
    <string name="decrease">retirer</string>
    <string name="increase">ajouter</string>
    <string name="change_stock_number">Changer le nombre d\'actions</string>
    <string name="sell_stocks">Vente d\'action</string>
    <string name="number">Nombre</string>
    <string name="selling_price">prix de vente</string>
    <string name="open_dividends">Dividendes</string>

</resources>
