<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/stockSymbolSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/numberOfSharesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_shares"
        android:inputType="number" />

    <EditText
        android:id="@+id/buyPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buy_price"
        android:inputType="numberDecimal" />

    <!-- Remove inputType="date" from here -->
    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:focusable="false" />

    <Button
        android:id="@+id/submitPositionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_position" />

</LinearLayout>
